[project]
name = "cloudbian-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "CloudberryPiTechnologies",email = "cloudberrypi1@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cloudbian_helper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
