[project]
name = "cloudbian-helper"
version = "0.1.2"
description = ""
authors = [
    {name = "CloudberryPiTechnologies",email = "cloudberrypi1@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "matplotlib (>=3.10.9,<4.0.0)",
    "py2app (>=0.28.10,<0.29.0)",
    "pyinstaller (>=6.20.0,<7.0.0)"
]

[tool.poetry.scripts]
cloudbian-helper = "cloudbian_helper.__main__:main"

[tool.poetry]
packages = [{include = "cloudbian_helper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
